在layui table的基础上对表格列进行扩展：点击单元格显示可输入搜索下拉列表。

--- a/test.html
+++ b/test.html
@@ -40,13 +40,22 @@
                 ,{field:'state', title: 'ajax传参',width:120}
                 ,{field:'test', title: '数组传参',width:120}
             ]],
-            done:function (e) {
+            done:function (res, curr, count) {
+                /**
+                 * 初始化表格数据
+                 */
+                layuiTableColumnSelect.initTableData(res.data);
+
                 layuiTableColumnSelect.render({
                     id:'#tableId',
                     field:'state',
                     url:'selectData.json',
                     where:{},
                     callback:function (obj) {
+                        console.log(obj.data); //当前行数据
+                        console.log(obj.select); //下拉选项数据
+                        console.log(obj.td); //当前单元格（td）DOM元素
+                        obj.update({state:parseInt(obj.select.name)}); // 更新当前列数据和单元格显示数据，与layui表格更新单元格方法原理一致。
                         layer.msg(JSON.stringify(obj));
                     }
                 });
@@ -56,6 +65,10 @@
                     field:'test',
                     data:selectParams,
                     callback:function (obj) {
+                        console.log(obj.data); //当前行数据
+                        console.log(obj.select); //下拉选项数据
+                        console.log(obj.td); //当前单元格（td）DOM元素
+                        obj.update({test:parseInt(obj.select.name)}); // 更新当前列数据和单元格显示数据，与layui表格更新单元格方法原理一致。
                         layer.msg(JSON.stringify(obj));
                     }
                 });
