在layui table的基础上对表格列进行扩展：点击单元格显示可输入搜索下拉列表。

--- a/test.html
+++ b/test.html
@@ -42,9 +42,13 @@
             ]],
             done:function (res, curr, count) {
                 /**
-                 * 初始化表格数据
+                 * 可兼容多个表格
+                 * 初始化表格数据，每个表调用一次。
                  */
-                layuiTableColumnSelect.initTableData(res.data);
+                layuiTableColumnSelect.initTableData({
+                    id:'#tableId', //表格id
+                    data:res.data  //表格数据
+                });
 
                 layuiTableColumnSelect.render({
                     id:'#tableId',
