在layui table的基础上对表格列进行扩展：点击单元格显示可输入搜索下拉列表。

--- a/test.html
+++ b/test.html
@@ -7,6 +7,11 @@
     <link rel="stylesheet" href="layui/css/layui.css">
 </head>
 <body>
+<script type="text/html" id="toolbarDemo">
+    <div class="layui-btn-container">
+        <button class="layui-btn layui-btn-sm" lay-event="getCheckData">获取选中行数据</button>
+    </div>
+</script>
 <table class="layui-hide" id="tableId" lay-filter="tableEvent"></table>
 </body>
 <script src="layui/layui.js"></script>
@@ -31,6 +36,7 @@
 
         table.render({
             elem: '#tableId'
+            ,toolbar: '#toolbarDemo'
             ,id:'id'
             ,url:'tableData.json'
             ,height: 'full-90'
@@ -51,8 +57,10 @@
                     callback:function (obj) {
                         console.log(obj.select); //下拉选项数据
                         console.log(obj.td); //当前单元格（td）DOM元素
-                        obj.update(); // 更新当前列数据和单元格显示数据，与layui表格更新单元格方法原理一致。
-                        layer.msg(JSON.stringify(obj));
+                        //把选择的数据更新到行数据中
+                        rowData.update({state:parseInt(obj.select.name)});
+                        //把选择的显示数据更新到单元格中显示
+                        obj.update();
                     }
                 });
 
@@ -63,9 +71,10 @@
                     callback:function (obj) {
                         console.log(obj.select); //下拉选项数据
                         console.log(obj.td); //当前单元格（td）DOM元素
-                        rowData['test'] = parseInt(obj.select.name);
-                        obj.update(); // 更新当前列数据和单元格显示数据，与layui表格更新单元格方法原理一致。
-                        layer.msg(JSON.stringify(obj));
+                        //把选择的数据更新到行数据中
+                        rowData.update({test:parseInt(obj.select.name)});
+                        //把选择的显示数据更新到单元格中显示
+                        obj.update();
                     }
                 });
             }
@@ -78,7 +87,7 @@
 
         //监听行单击事件（双击事件为：rowDouble）
         table.on('row(tableEvent)', function(obj){
-            rowData = obj.data;
+            rowData = obj;
         });
 
         table.on('tool(tableEvent)',function (obj) {
@@ -87,6 +96,14 @@
 
         table.on('edit(tableEvent)',function (obj) {
             layer.msg("edit");
+        });
+
+        //获取选中行事件
+        table.on('toolbar(tableEvent)', function(obj){
+            if(obj.event === 'getCheckData'){
+                var checkStatus = table.checkStatus(obj.config.id);
+                console.log(checkStatus.data)
+            }
         });
     });
 </script>
