--- a/单选.html
+++ b/单选.html
@@ -54,7 +54,7 @@
                         callback:function (obj1) {
                             console.log(obj1.select); //下拉选项数据
                             console.log(obj1.td); //当前单元格（td）DOM元素
-                            obj.update({age: parseInt(obj1.select.name)});
+                            obj.update({state: parseInt(obj1.select.name)});
                             //把选择的显示数据更新到单元格中显示
                             layuiTableColumnEdit.update({element:td,value:obj1.select.value});
                         }
