--- a/单选.html
+++ b/单选.html
@@ -5,20 +5,21 @@
     <meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1">
     <title>示例demo</title>
     <link rel="stylesheet" href="layui/css/layui.css">
+    <link rel="stylesheet" href="layui/css/modules/tableedit/tableedit.css">
 </head>
 <body>
 <table class="layui-hide" id="tableId" lay-filter="tableEvent"></table>
 </body>
 <script src="layui/layui.js"></script>
 <script>
-    layui.config({
+    /*layui.config({
         base: 'module/'
     }).extend({
         layuiTableColumnEdit:'js/layuiTableColumnEdit'
-    }).use(['table','layuiTableColumnEdit','layer'], function () {
+    })*/layui.use(['table','layer'], function () {
         var table = layui.table,layer = layui.layer;
-        var layuiTableColumnEdit = layui.layuiTableColumnEdit;
-        var $ = layui.$;
+        //var layuiTableColumnEdit = layui.layuiTableColumnEdit;
+        //var $ = layui.$;
         var selectParams = [
             {name:1,value:"张三1"},
             {name:2,value:"张三2"},
@@ -35,21 +36,23 @@
             ,cols: [[
                 {type:'checkbox'}
                 ,{field:'name',title: 'table输入框',width:120}
-                ,{field:'age', title: 'table点击事件',width:120,sort:'true'}
-                ,{field:'state', title: 'ajax传参',width:120,event:'state'}
+                ,{field:'age', title: 'table点击事件',width:120,edit:'select',data:selectParams,sort:'true'}
+                ,{field:'state', title: 'ajax传参',width:120,edit:'date',dateType:'datetime'}
                 ,{field:'test', title: '数组传参',width:120,event:'test',sort:'true'}
             ]],
             done:function (res, curr, count) {
             }
         });
-        table.on('tool(tableEvent)', function(obj){
+        table.on('edit(tableEvent)', function(obj){
+            console.log(obj);
+        });
+        /*table.on('tool(tableEvent)', function(obj){
+            var othis = this;
             if(obj.event === 'state'){
-                var td = $(obj.tr).find("td[data-field='state']")[0];
                 $.getJSON('selectData.json',{},function (result) {
                     layuiTableColumnEdit.createSelect({
-                        id:'#tableId',
                         data:result.data,
-                        element:td,
+                        element:othis,
                         //enabled:true,//true：开启多选，false：单选。默认为false
                         callback:function (obj1) {
                             console.log(obj1.select); //下拉选项数据
@@ -61,10 +64,8 @@
                     });
                 });
             }else if(obj.event === 'test'){
-                var testTd = $(obj.tr).find("td[data-field='test']")[0];
                 layuiTableColumnEdit.createSelect({
-                    id: '#tableId',
-                    element: this,
+                    element: othis,
                     data: selectParams,
                     callback: function (obj2) {
                         console.log(obj2.select); //下拉选项数据
@@ -76,7 +77,7 @@
                     }
                 });
             }
-        });
+        });*/
     });
 </script>
 </html>
