--- a/组件整合layui框架.html
+++ b/组件整合layui框架.html
@@ -33,8 +33,11 @@
             ,cols: [[
                 {type:'checkbox'}
                 ,{field:'name',title: '姓名',width:120,event:'name'}
+                //eventType => select（下拉框）date（时间选择框）
                 ,{field:'danxuan', title: '单选',width:120,event:'danxuan',eventType:'select',data:selectParams}
-                ,{field:'duoxuan', title: '多选',width:120,event:'duoxuan',eventType:'select',data:selectParams,enabled:true} //enabled（单、多选开关） true：多选，false：单选。默认为false
+                //data 为下拉框数据  enabled（单、多选开关） true：多选，false：单选。默认为false
+                ,{field:'duoxuan', title: '多选',width:120,event:'duoxuan',eventType:'select',data:selectParams,enabled:true}
+                //dateType表示日期时间格式，date为“yyyy-MM-dd”，datetime为“yyyy-MM-dd HH:ss:mm”
                 ,{field:'birthday', title: '生日',width:120,event:'birthday',eventType:'date',dateType:'date'}
             ]]
         }).config.cols;
