--- a/组件整合layui框架.html
+++ b/组件整合layui框架.html
@@ -41,8 +41,9 @@
                 ,{field:'birthday', title: '生日',width:120,event:'birthday',eventType:'date',dateType:'date'}
             ]]
         }).config.cols;
-        //cols为列信息
-        layuiTableColumnEdit.on('tool(tableEvent)',cols,function (obj) {
+        //参数cols是table.render({})中的cols属性值
+        var aopTable = layuiTableColumnEdit.aopObj(cols); //获取一个aop对象
+        aopTable.on('tool(tableEvent)',function (obj) {
             var field = $(this).data('field');
             if(field === 'danxuan'){
                 obj.update({danxuan:obj.value.value});
@@ -58,7 +59,7 @@
         /*
         * 注意：
         *
-        * 1、 layuiTableColumnEdit.on('tool(xxx)',cols,function (obj) {})
+        * 1、 aopTable.on('tool(xxx)',function (obj) {})
         * 2、 table.on('tool(yyy)',cols,function (obj) {})
         *
         * 如果1中的xxx与2中的yyy字符串相同时，不能同时用，用了会造成后调用者覆盖前调用者。
