--- a/单选.html
+++ b/单选.html
@@ -5,6 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1">
     <title>示例demo</title>
     <link rel="stylesheet" href="layui/css/layui.css">
+    <link rel="stylesheet" href="module/css/layuiTableColumnEdit.css">
 </head>
 <body>
 <table class="layui-hide" id="tableId" lay-filter="tableEvent"></table>
@@ -43,34 +44,30 @@
             }
         });
         table.on('tool(tableEvent)', function(obj){
+            var othis = this;
             if(obj.event === 'state'){
                 var td = $(obj.tr).find("td[data-field='state']")[0];
                 $.getJSON('selectData.json',{},function (result) {
                     layuiTableColumnEdit.createSelect({
                         data:result.data,
-                        element:td,
+                        element:othis,
                         //enabled:true,//true：开启多选，false：单选。默认为false
-                        callback:function (obj1) {
-                            console.log(obj1.select); //下拉选项数据
-                            console.log(obj1.td); //当前单元格（td）DOM元素
-                            obj.update({state: parseInt(obj1.select.name)});
+                        callback:function (res) {
+                            obj.update({state: parseInt(res.name)});
                             //把选择的显示数据更新到单元格中显示
-                            layuiTableColumnEdit.update({element:td,value:obj1.select.value});
+                            layuiTableColumnEdit.update({element:this,value:res.value});
                         }
                     });
                 });
             }else if(obj.event === 'test'){
-                var testTd = $(obj.tr).find("td[data-field='test']")[0];
                 layuiTableColumnEdit.createSelect({
-                    element: this,
+                    element: othis,
                     data: selectParams,
-                    callback: function (obj2) {
-                        console.log(obj2.select); //下拉选项数据
-                        console.log(obj2.td); //当前单元格（td）DOM元素
+                    callback: function (res) {
                         //把选择的数据更新到行数据中
-                        obj.update({test: parseInt(obj2.select.name)});
+                        obj.update({test: parseInt(res.name)});
                         //把选择的显示数据更新到单元格中显示
-                        layuiTableColumnEdit.update({element:testTd,value:obj2.select.value});
+                        layuiTableColumnEdit.update({element:this,value:res.value});
                     }
                 });
             }
