--- a/多选.html
+++ b/多选.html
@@ -5,6 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1">
     <title>示例demo</title>
     <link rel="stylesheet" href="layui/css/layui.css">
+    <link rel="stylesheet" href="module/css/layuiTableColumnEdit.css">
 </head>
 <body>
 <table class="layui-hide" id="tableId" lay-filter="tableEvent"></table>
@@ -55,11 +56,10 @@
                         element:othis,
                         enabled:true,//true：开启多选，false：单选。默认为false
                         callback:function (obj1) {
-                            console.log(obj1.select); //下拉选项数据
-                            console.log(obj1.td); //当前单元格（td）DOM元素
-                            obj.update({state: parseInt(obj1.select.name)});
+                            console.log(obj1); //下拉选项数据
+                            obj.update({state: parseInt(obj1[0].name)});
                             //把选择的显示数据更新到单元格中显示
-                            layuiTableColumnEdit.update({element:td,value:obj1.select.value});
+                            layuiTableColumnEdit.update({element:this,value:obj1[0].value});
                         }
                     });
                 });
@@ -69,12 +69,11 @@
                     data: selectParams,
                     enabled:true,//true：开启多选，false：单选。默认为false
                     callback: function (obj2) {
-                        console.log(obj2.select); //下拉选项数据
-                        console.log(obj2.td); //当前单元格（td）DOM元素
+                        console.log(obj2); //下拉选项数据
                         //把选择的数据更新到行数据中
-                        obj.update({test: parseInt(obj2.select.name)});
+                        obj.update({test: parseInt(obj2[0].name)});
                         //把选择的显示数据更新到单元格中显示
-                        layuiTableColumnEdit.update({element:othis,value:obj2.select.value});
+                        layuiTableColumnEdit.update({element:this,value:obj2[0].value});
                     }
                 });
             }
