--- a/组件整合layui框架.html
+++ b/组件整合layui框架.html
@@ -5,8 +5,9 @@
     <meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1">
     <title>示例demo</title>
     <link rel="stylesheet" href="layui/css/layui.css">
+    <link rel="stylesheet" href="module/css/layuiTableColumnEdit.css">
 </head>
-<body>
+<body style="width: 200%">
 <table class="layui-hide" id="tableId" lay-filter="tableEvent"></table>
 </body>
 <script src="layui/layui.js"></script>
