--- a/组件整合layui框架.html
+++ b/组件整合layui框架.html
@@ -5,9 +5,8 @@
     <meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1">
     <title>示例demo</title>
     <link rel="stylesheet" href="layui/css/layui.css">
-    <link rel="stylesheet" href="module/css/layuiTableColumnEdit.css">
 </head>
-<body style="width: 200%">
+<body style="width: 200%;height: 2000px">
 <table class="layui-hide" id="tableId" lay-filter="tableEvent"></table>
 </body>
 <script src="layui/layui.js"></script>
