--- a/aop代理整合应用.html
+++ b/aop代理整合应用.html
@@ -90,9 +90,10 @@
 
         /** 级联下拉框 => 点击事件生成下拉框之前的回调函数
          * 主要用于 => 动态获取单元格下拉数据
+         * tableEvent => table的lay-filter属性值
          * 如示例代码所示
          */
-        tableEdit.on('clickBefore',function () {
+        tableEdit.on('clickBefore(tableEvent)',function () {
             var cascadeSelectData = $(this).attr("cascadeSelect-data"); //级联数据
             var cascadeSelectField = $(this).attr("cascadeSelect-field"); //级联字段
             cascadeSelectData = JSON.parse(cascadeSelectData);
