--- a/单独使用.html
+++ b/单独使用.html
@@ -42,7 +42,7 @@
         table.on('tool(tableEvent)', function(obj){
             var zthis = this;
             if(obj.event === 'danxuan'){ //单选
-                tableEdit.createSelect({
+                tableEdit.callback("createSelect",{
                     element: zthis,
                     data: params,
                     //enabled:true,//true：开启多选，false：单选。默认为false
@@ -50,14 +50,15 @@
                         //把选择的数据更新到行数据中
                         obj.update({danxuan: res.name});
                         //把选择的显示数据更新到单元格中显示
-                        tableEdit.update({element:this,value:res.value});
+                        tableEdit.callback("update",{element:this,value:res.value});
+                        tableEdit.callback("hideInput",{element:'#tableId',fields:['danxuan']});
                     }
                 });
             }
 
             if(obj.event === 'duoxuan'){ //多选
                 $.getJSON('selectData.json',{},function (result) {
-                    tableEdit.createSelect({
+                    tableEdit.callback("createSelect",{
                         data:result.data,
                         element:zthis,
                         enabled:true,//true：开启多选，false：单选。默认为false
@@ -69,7 +70,7 @@
             }
 
             if(obj.event === 'birthday'){ //日期
-                tableEdit.createDate({
+                tableEdit.callback("createDate",{
                     //日期时间选择器的类型：datetime（日期时间）、date（日期）和time（时间），默认datetime。
                     dateType:'datetime',
                     element:zthis,
